# kdev-cpp-clang-refactor

./: CMakeLists.txt  sourcemodificationsapplier.cpp  sourcemodificationsapplier.hpp
Test/: CMakeLists.txt  SourceModificationApplierTester.cpp  SourceModificationApplierTester.hpp
